@@ -2,10 +2,10 @@ param(
     [string]$Message = "Automated commit"
 )
 
-# Ensure Git LFS is initialized (only needs to run once per machine)
+# === Git LFS setup ===
 git lfs install
 
-# Tell Git LFS which file patterns to track (only needs to run once per repo)
+# Track common build artifacts
 git lfs track "*.zip"
 git lfs track "*.wav"
 git lfs track "*.exe"
@@ -14,12 +14,14 @@ git lfs track "*.dll"
 # Stage .gitattributes if it changed
 git add .gitattributes
 
-# Stage all other changes
+# Stage all other changes (optional)
 git add .
 
+# Commit current changes
 git commit -m "$Message"
 
-# Find the latest tag like v1.2.3, sorted as version
+# === Version detection ===
+# Find the latest tag like v1.2.3
 $lastTag = git tag --list "v*" | Sort-Object {[version]($_ -replace '^v','')} -Descending | Select-Object -First 1
 
 if ($lastTag -match '^v(\d+)\.(\d+)\.(\d+)$') {
@@ -32,7 +34,9 @@ if ($lastTag -match '^v(\d+)\.(\d+)\.(\d+)$') {
 }
 
 Write-Host "Last tag: $lastTag"
-$choice = Read-Host "Which part would you like to increment? (1=major, 2=minor, 3=patch, default=patch):"
+
+# Ask user which part to increment
+$choice = Read-Host "Which part to increment? (1=major, 2=minor, 3=patch, default=patch):"
 switch ($choice.ToLower()) {
     "major" { $major++; $minor=0; $patch=0 }
     "1"     { $major++; $minor=0; $patch=0 }
@@ -43,11 +47,47 @@ switch ($choice.ToLower()) {
     default { $patch++ }
 }
 
+# New semantic version
 $newTag = "v$major.$minor.$patch"
 Write-Host "Creating and pushing tag $newTag..."
 
+# Tag and push
 git tag $newTag
 git push
 git push origin $newTag
 
-Write-Host "Committed and tagged as $newTag."
+# === Update changelog automatically ===
+$timestamp = Get-Date -Format "yyyy-MM-dd HH:mm"
+$changelogPath = "changelog.txt"
+
+# Get all commits since last tag
+if ($lastTag -ne "v0.0.0") {
+    $commits = git log $lastTag..HEAD --pretty=format:"- %s"
+} else {
+    $commits = git log --pretty=format:"- %s"
+}
+
+# Build changelog entry
+$changelogEntry = "[$timestamp] $newTag`n$commits`n"
+
+# Append to changelog.txt
+Add-Content -Path $changelogPath -Value $changelogEntry
+Write-Host "Updated changelog.txt:"
+Write-Host $changelogEntry
+
+# Stage and push changelog
+git add $changelogPath
+git commit -m "Update changelog for $newTag"
+git push
+
+# === Update version.txt ===
+$versionFile = "version.txt"
+$versionInfo = "$newTag ($timestamp)"
+Set-Content -Path $versionFile -Value $versionInfo
+Write-Host "Updated version.txt: $versionInfo"
+
+git add $versionFile
+git commit -m "Update version file for $newTag"
+git push
+
+Write-Host "Release complete: $newTag"
