@@ -1,9 +1,1 @@
-CompanyName=@game_play267
-FileDescription=T7ES3 Screen Capture Advanced
-FileVersion=%%VERSION%%
-InternalName=T7ES3 Screen Capture Advanced
-OriginalFilename=t7es3sca.exe
-ProductName=T7ES3 Screen Capture Advanced
-ProductVersion=%%VERSION%%
-LegalCopyright=© 2025 Philip
-Comments=Built on 20250810_22 | Git Tag: %%GIT_TAG%%
+﻿v20251016_235650
